--- a/theme/default/block/footer.html
+++ b/theme/default/block/footer.html
@@ -1,5 +1,5 @@
 <footer id="colophon" class="site-footer" role="contentinfo">
     <div class="site-info">
-        <a href="https://github.com/jockchou/gitblog">Proudly powered by Gitblog</a>
+        <a href="https://github.com/jimersylee">Jimersy Lee</a>
     </div><!-- .site-info -->
 </footer><!-- .site-footer -->
