--- a/theme/default/block/comments.html
+++ b/theme/default/block/comments.html
@@ -19,7 +19,7 @@
 </div><!-- .comments-area -->
 {% elseif site.youyan %}
 <!-- UY BEGIN -->
-<div id="uyan_frame"></div>
+<div class="post hentry" id="uyan_frame"></div>
 <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid={{site.youyan}}"></script>
 <!-- UY END -->
 {% endif %}
