增加百度自动推送

--- a/theme/default/block/script.html
+++ b/theme/default/block/script.html
@@ -5,3 +5,17 @@ var screenReaderText = {"expand":"<span class=\"screen-reader-text\">\u5c55\u5f0
 /* ]]> */
 </script>
 <script type="text/javascript" src="{{ site.url }}theme/default/js/functions.js?ver={{ site.version }}"></script>
+<script>
+    (function(){
+        var bp = document.createElement('script');
+        var curProtocol = window.location.protocol.split(':')[0];
+        if (curProtocol === 'https') {
+            bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+        }
+        else {
+            bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+        }
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(bp, s);
+    })();
+</script>
